--- a/public/index.html
+++ b/public/index.html
@@ -76,6 +76,7 @@
     <select id="nameSelect" style='height:40px; width:320px;'>
         <option value="">-- Select Name --</option>
         <option value="guido">Guido van Rossum (Python)</option>
+        <option value="pavan">Sai pavan (Student)</option>
         <option value="dennis">Dennis M. Ritchie (C)</option>
         <option value="james">James Gosling (Java)</option>
         <option value="stroustrup">Bjarne Stroustrup (C++)</option>
@@ -124,7 +125,9 @@
 
             // Store the details temporarily
             let photos = {
+
                 "guido": "images/guido.jpg",
+                "pavan": "images/pavan.jpeg",
                 "dennis": "images/dennis.jpg",
                 "james": "images/james.jpg",
                 "stroustrup": "images/stroustrup.jpg",
@@ -144,6 +147,7 @@
 
             let details = {
                 "guido": "Guido van Rossum created Python in 1991.",
+                "pavan": "HE is from CSE(AIML) with roll number 23951A66F7.",
                 "dennis": "Dennis Ritchie developed C and co-created UNIX.",
                 "james": "James Gosling invented Java in 1995.",
                 "stroustrup": "Bjarne Stroustrup created C++.",
