Add Sai Pavan to the options list

--- a/JFS_VISEM/public/Photo_Details/index.html
+++ b/JFS_VISEM/public/Photo_Details/index.html
@@ -29,6 +29,7 @@
         <option value="tim_berner">Tim Berners-Lee (WWW)</option>
         <option value="Sundar_Pichai">Sundar Pichai (Google CEO)</option>
         <option value="satyanadella">Satya Nadella (Microsoft CEO)</option>
+		<option value="pavan">Sai pavan (Student)</option>
         
         <option value="AdaLovelace">Ada Lovelace (1st Programmer)</option>
         <option value="madhu">Madhu (JFS Trainer, CDC, IARE Hyderabad)</option>
